@@ -17,7 +17,7 @@
 # Place, Suite 330, Boston, MA  02111-1307  USA
 
 # Default build flags.
-CPPFLAGS := -DREROOTD -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE
+CPPFLAGS := -I.. -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE
 CXXFLAGS := -g -pipe -Wall -W -Werror -O2
 LDFLAGS := -pipe
 
